src/frontend/acedemic-challenge/app/routes/log-in/SelectLevelPage/selectLevelPage.module.css
@import "../login.module.css";

.selectLevelPageContainer {
    height: 100%;
    width: 100%;
}

.selectLevelPageInnerContainer {
    padding: 0 1rem 0 1rem;

    height: 100%;
    width: 100%;

    display: flex;
    flex-direction: column;
    align-items: center;

    overflow: hidden;
}

.titleContainer {
    margin-bottom: 5%;
    margin-top: 3%;

    display: flex;
    justify-content: center;
}

.titleHeading {
    /*font-size: clamp(1rem, 4vw, 1.25rem);*/
    font-size: 1rem;

    font-weight: 300;
    color: white;
}

.levelListContainer {
    overflow: auto;

    padding: 0 2rem 0 2rem;

    display: grid;
    grid-auto-rows: 1fr;
    grid-auto-columns: 1fr;
    gap: 0.5rem;
}

.levelContainer {
    display: flex;
    flex-direction: row;
}

.levelImageContainer {
    /*height: clamp(5rem, 15vh, 12rem);*/
    width: 9rem;
    aspect-ratio: 1 / 0.75;

    overflow: hidden;
}

.levelImageContainer img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    object-position: center;
}

.levelContentContainer {
    flex-grow: 1;

    flex-basis: 60%;

    display: flex;
    flex-direction: column;
}

.levelButton {
    padding: 0.25rem;

    width: 100%;

    font-size: clamp(0.75rem, 4vw, 1.25rem);
    font-weight: bold;
    text-wrap: nowrap;

    background-color: var(--secondary);
}

.levelButton.selected {
    background-color: var(--yellow);
}

.levelContentTextContainer {
    margin-top: 0.375rem;

    font-size: clamp(0.75rem, 3vw, 1rem);
    font-weight: 200;

    color: white;

    display: flex;
    justify-content: center;
    text-align: center;
}

.levelContentTextContainer p {
    width: 100%;
}

.confirmButtonContainer {
    width: 100%;

    flex-grow: 1;

    display: flex;
    align-items: center;
    justify-content: center;
}

.confirmLevelButton {
    padding: 0.5rem;

    font-size: 1.5rem;
    font-weight: bold;

    background-color: var(--yellow);
}

@media (hover: hover) {
    .levelButton.selected:hover {
        background-color: var(--yellow-85);
    }

    .levelButton:hover {
        background-color: var(--secondary-85);
    }
}

@media (min-width: 768px) {
    .confirmButtonContainer {
        justify-content: flex-end;
    }

    .levelListContainer {
        grid-auto-flow: column;
        justify-content: space-between;
    }

    .levelContainer {
        flex-direction: column;
        align-items: center;
        gap: 0.5rem;
    }

    .levelImageContainer {
        width: clamp(8rem, 70%, 15rem);
        aspect-ratio: 1 / 1;

        display: flex;
        justify-content: center;
    }

    .levelImageContainer img {
    }

    .levelButton {
    }

    .levelContentTextContainer {
        font-size: clamp(1rem, 2vw, 1.25rem);
    }
}

